--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <title>S C R E E O S</title>
+    
+    <styles>
+      body {
+        background: #03060f;
+        color: #00f2a8;
+      }
+    </styles>
   </head>
   <body>
     <h1>S C R E E O S</h1>
