--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <title>S C R E E O S</title>
     
-    <styles>
+    <style>
       body {
         background: #03060f;
         color: #00f2a8;
+        padding: 2rem;
+        text-align: center;
       }
-    </styles>
+    </style>
   </head>
   <body>
     <h1>S C R E E O S</h1>
