--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
   </head>
   <body>
+    <img alt="Alien" src="/alien.png" />
     <h1>S C R E E O S</h1>
     <h2>B A Z E</h2>
   </body>
