--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <title>S C R E E O S</title>
     
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+    
     <style>
       body {
         background: #03060f;
         color: #00f2a8;
         padding: 2rem;
         text-align: center;
+        font-family: 'Alata', sans-serif;
       }
     </style>
   </head>
